Archive2/dc/6bcf05ba06b2d6/output
main.cpp: In function 'int main()':
main.cpp:7:45: error: invalid conversion from 'void*' to 'int*' [-fpermissive]
     int *array = std::malloc(4 * sizeof(int));
                                             ^
